--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,68 @@
-// components/History/CardsRow/cardsRowScrollWrapper.tsx
-"use client";
+/** @type {import('tailwindcss').Config} */
 
-import { ChevronLeft, ChevronRight } from "lucide-react";
-import { useRef } from "react";
-
-export default function CardsRowScrollWrapper({ children }: { children: React.ReactNode }) {
-  const scrollRef = useRef<HTMLDivElement>(null);
-
-  const scrollLeft = () => {
-    scrollRef.current?.scrollBy({ left: -300, behavior: "smooth" });
-  };
-
-  const scrollRight = () => {
-    scrollRef.current?.scrollBy({ left: 300, behavior: "smooth" });
-  };
-
-  return (
-    <div className="relative w-full overflow-hidden">
-      <button
-        onClick={scrollLeft}
-        className="absolute left-2 top-1/2 -translate-y-1/2 z-10 bg-white shadow rounded-full p-1"
-      >
-        <ChevronLeft size={20} />
-      </button>
-      <button
-        onClick={scrollRight}
-        className="absolute right-2 top-1/2 -translate-y-1/2 z-10 bg-white shadow rounded-full p-1"
-      >
-        <ChevronRight size={20} />
-      </button>
-
-      <div
-        ref={scrollRef}
-        className="overflow-x-auto scroll-smooth no-scrollbar w-full"
-      >
-        <div className="flex gap-6 min-w-fit px-8 py-2">{children}</div>
-      </div>
-    </div>
-  );
-}
+module.exports = {
+  darkMode: ["class"], // suporta modo escuro com classe
+  content: [
+    "./src/**/*.{ts,tsx}",
+    "./components/**/*.{ts,tsx}",
+    "./app/**/*.{ts,tsx}",
+  ],
+  theme: {
+    container: {
+      center: true,
+      padding: "2rem",
+      screens: {
+        "2xl": "1400px",
+      },
+    },
+    extend: {
+      colors: {
+        border: "hsl(var(--border))",
+        input: "hsl(var(--input))",
+        ring: "hsl(var(--ring))",
+        background: "hsl(var(--background))",
+        foreground: "hsl(var(--foreground))",
+        primary: {
+          DEFAULT: "hsl(var(--primary))",
+          foreground: "hsl(var(--primary-foreground))",
+          100: "#484A55",
+          500: "",
+          900: "",
+        },
+        secondary: {
+          secondary: "#F7F7F8",
+          foreground: "hsl(var(--secondary-foreground))",
+        },
+        destructive: {
+          DEFAULT: "hsl(var(--destructive))",
+          foreground: "hsl(var(--destructive-foreground))",
+        },
+        muted: {
+          DEFAULT: "hsl(var(--muted))",
+          foreground: "hsl(var(--muted-foreground))",
+        },
+        accent: {
+          DEFAULT: "hsl(var(--accent))",
+          foreground: "hsl(var(--accent-foreground))",
+        },
+        popover: {
+          DEFAULT: "hsl(var(--popover))",
+          foreground: "hsl(var(--popover-foreground))",
+        },
+        card: {
+          DEFAULT: "hsl(var(--card))",
+          foreground: "hsl(var(--card-foreground))",
+        },
+      },
+      borderRadius: {
+        lg: "var(--radius)",
+        md: "calc(var(--radius) - 2px)",
+        sm: "calc(var(--radius) - 4px)",
+      },
+      fontFamily: {
+        sans: ["var(--font-sans)", "sans-serif"],
+      },
+    },
+  },
+  plugins: [require("tailwindcss-animate")],
+};
